--- a/WordPuzzleScorer.Tests.Acceptance/app.config
+++ b/WordPuzzleScorer.Tests.Acceptance/app.config
@@ -7,8 +7,8 @@
         <bindingRedirect oldVersion="0.0.0.0-2.1.0.3179" newVersion="2.1.0.3179" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Ploeh.AutoFixture" publicKeyToken="b24654c590009d4f" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.45.1.0" newVersion="3.45.1.0" />
+        <assemblyIdentity name="Moq" publicKeyToken="69f491c39445e920" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.1510.2205" newVersion="4.2.1510.2205" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
