--- a/WordPuzzleScorer.Tests.Acceptance/packages.config
+++ b/WordPuzzleScorer.Tests.Acceptance/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoFixture" version="3.45.1" targetFramework="net451" />
+  <package id="AutoFixture.AutoMoq" version="3.45.1" targetFramework="net451" />
+  <package id="AutoFixture.Xunit2" version="3.45.1" targetFramework="net451" />
   <package id="Moq" version="4.2.1510.2205" targetFramework="net451" />
   <package id="xunit" version="2.1.0" targetFramework="net451" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net451" />
