--- a/WordPuzzleScorer.UI/packages.config
+++ b/WordPuzzleScorer.UI/packages.config
@@ -4,9 +4,12 @@
   <package id="AutoMapper" version="4.2.1" targetFramework="net451" />
   <package id="bootstrap" version="3.0.0" targetFramework="net451" />
   <package id="jQuery" version="1.10.2" targetFramework="net451" />
+  <package id="jquery.TypeScript.DefinitelyTyped" version="3.0.6" targetFramework="net451" />
   <package id="jQuery.UI.Combined" version="1.11.4" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net451" />
+  <package id="knockout.TypeScript.DefinitelyTyped" version="1.1.3" targetFramework="net451" />
   <package id="knockoutjs" version="3.4.0" targetFramework="net451" />
+  <package id="lodash.TypeScript.DefinitelyTyped" version="2.3.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net451" />
